# fairtorch

./: .all-contributorsrc  .gitignore  .python-version  LICENSE  Pipfile  README.md  demo.ipynb  demo_live.ipynb  pyproject.toml  requirements.txt  setup.py
examples/: demo.ipynb  demo_live.ipynb  example_bar_pass_prediction.py  fairtorch_DP_1590.ipynb
examples/inputs/: bar_pass_prediction.csv
fairtorch/: __init__.py  adversarial.py  constraint.py  test.py
test/: test.py
tests/: test_constraint.py  test_constraint_gpu.py  test_gpu.py  test_tmp_cuda.py
