[tool.poetry]
name = "fairtorch"
version = "0.1.1"
description = ""
authors = ["Masashi Sode <masashi.sode@gmail.com>", "Akihiko Fukuchi <fukuchi@cl.rcast.u-tokyo.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.5"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
isort = "^4.3.21"
autopep8 = "^1.5.2"
mypy = "^0.782"
pytest = "^6.0.1"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
sklearn = "^0.0"
pandas = "^1.1.3"
jupyterlab = "^2.2.8"
fairlearn = "^0.4.6"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
