[tool.poetry]
name = "fairtorch"
version = "0.1.2"
description = ""
authors = ["Masashi Sode <masashi.sode@gmail.com>", "Akihiko Fukuchi <fukuchi@cl.rcast.u-tokyo.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.5"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
isort = "^4.3.21"
autopep8 = "^1.5.2"
mypy = "^0.782"
pytest = "^6.0.1"
pandas = "^1.1.4"
numpy = "^1.19.4"
seaborn = "^0.11.0"
matplotlib = "^3.3.3"
scikit-learn = "^0.23.2"
xlrd = "^1.2.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
[build-system]
requires = ["poetry-core>=1.0.0a5", "setuptools"]
build-backend = "poetry.core.masonry.api"
